# AstroBot

./: .env.example  AGENTS.md  CHANGELOG.md  Dockerfile  PHASE_1_PLAN.md  README.md  TECH_DEBT.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  start_bot.sh
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: config.py  di.py  exceptions.py  main.py
app/bot/: __init__.py
app/bot/fsm/: onboarding_states.py
app/bot/handlers/: chat.py  onboarding.py
app/bot/middlewares/: __init__.py
app/domain/entities/: __init__.py  astro.py  birth_data.py  memory.py  payment.py  session.py  user.py
app/domain/interfaces/: __init__.py  astro_model.py  geo.py  llm.py  payment.py  rate_limiter.py  repositories.py
app/infra/astro_model/: ephemeris_based.py  prompt_engineered.py
app/infra/crypto/: aes_cipher.py
app/infra/db/: models.py  (+1 more)
app/prompts/: system_prompt.md
app/services/: chat_service.py  conception_service.py  memory_resolver.py  onboarding_service.py  session_service.py
app/utils/: logger.py
beat/: schedule.py
docs/: API_ROUTES_GUIDE.md  ARCHITECTURE.md  ASTRO_MODEL_DESIGN.md  CHECKLIST_API.md  CHECKLIST_FEATURE.md  CHECKLIST_MIGRATION.md  CODE_GUIDELINES.md  DEVELOPMENT_GUIDELINES.md  ERROR_HANDLING.md  LOGGING.md  NAMING_CONVENTIONS.md  TESTING.md
tests/unit/: test_aes_cipher.py  test_astro_model.py  test_chat_service.py  test_conception_service.py  test_di.py  test_onboarding_service.py  test_repositories.py  test_session_service.py
worker/: celery_app.py
worker/tasks/: memory_tasks.py  session_tasks.py
(+4 files in other folders)
